--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
